--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -120,7 +120,7 @@ setImageWithFallback(whoaiImg,
   {className:'ph whoai', label:'missing: whoai'});
 const bucketImg=document.getElementById('bucketImg');
 setImageWithFallback(bucketImg,
-  ['public/bucket.png','public/props/bucket.png'],
+  ['public/bucket.png.pug','public/props/bucket.png'],
   {className:'bucket fallback', label:'missing: bucket'});
 
 /* ===== 状態 ===== */
