--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -1,207 +1,246 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8" />
-<title>WHOAI Gem</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no" />
-<style>
-  html,body{
-    margin:0; padding:0; height:100svh; background:#000; color:#fff; overflow:hidden;
-    font-family:system-ui,-apple-system,Segoe UI,Roboto,'Hiragino Sans','Noto Sans JP',sans-serif;
-    -webkit-user-select:none; user-select:none; -webkit-touch-callout:none;
-    touch-action:none; overscroll-behavior:none;
-  }
+  <meta charset="UTF-8">
+  <title data-i18n="title">WHOAI Gem</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <style>
+    body,html{
+      margin:0;padding:0;overflow:hidden;height:100%;
+      font-family:sans-serif;background:#000;color:#fff;
+      touch-action:none; /* スクロール防止（スマホ用） */
+    }
+    .bg{
+      position:absolute;top:0;left:0;width:100%;height:100%;
+      background-size:cover;background-position:center;
+      transition:opacity 1s;
+    }
+    .hide{opacity:0;pointer-events:none}
 
-  /* 背景 */
-  .bg{position:fixed; inset:0; width:100svw; height:100svh;
-      background-size:cover; background-position:center;
-      opacity:0; transition:opacity .8s; z-index:0}
-  .bg.show{opacity:1}
-  .grad-sunrise{background:linear-gradient(#ffdfb5,#f7a7b1 40%,#8fb7ff)}
-  .grad-beach  {background:linear-gradient(#b6e3ff,#9ad0ff 60%,#f2d7a2)}
-  .grad-night  {background:radial-gradient(circle at 50% 20%,#1b2b52,#0a1430 70%)}
+    .whoai{
+      position:absolute;
+      bottom:12vh;left:5vw;
+      width:clamp(80px,12vw,140px);
+      animation:hop 2s infinite;
+      user-select:none;
+    }
+    @keyframes hop{0%,100%{transform:translateY(0)}50%{transform:translateY(-15px)}}
 
-  /* WHOAIキャラ */
-  .whoai{position:fixed; bottom:12svh; left:5svw; z-index:4; width:clamp(80px,12svw,140px); animation:hop 2s infinite}
-  @keyframes hop{0%,100%{transform:translateY(0)}50%{transform:translateY(-15px)}}
-  .whoai.yay{animation:yay .6s ease}
-  @keyframes yay{0%{transform:scale(1)}30%{transform:scale(1.15)}100%{transform:scale(1)}}
+    .bucket{
+      position:absolute;
+      right:2vw;bottom:6vh;
+      width:clamp(72px,14vw,160px);
+      user-select:none;
+    }
+    .bucket img{display:block;width:100%;height:auto}
 
-  /* バケツ */
-  .bucket{position:fixed; right:2svw; bottom:8svh; z-index:4;
-    width:clamp(72px,14svw,160px); aspect-ratio:1/1; display:flex; align-items:center; justify-content:center}
-  .bucket img{max-width:100%; max-height:100%; display:block}
-  .bucket.fallback{border:2px solid #f66; border-radius:10px; color:#f66; font-size:12px; padding:6px}
-  .counter{
-    position:absolute; top:-10px; right:-10px; z-index:5;
-    font-size:clamp(12px,1.8svw,18px); background:#fff; color:#111; padding:4px 8px; border-radius:999px;
-    box-shadow:0 2px 6px rgba(0,0,0,.25)
-  }
+    #counter{
+      position:absolute;
+      right:calc(2vw + 40px); bottom:calc(6vh + 40px);
+      font-size:clamp(16px,2vw,24px);
+      background:#fff;color:#111;
+      padding:6px 12px;border-radius:50%;
+      text-align:center;
+    }
 
-  /* UI */
-  #toast{position:fixed; top:10px; left:10px; z-index:11; background:rgba(0,0,0,.6); padding:6px 12px; border-radius:8px}
-  .ui{position:fixed; bottom:10px; left:50%; transform:translateX(-50%); display:flex; gap:6px; z-index:10}
-  .ui button{padding:6px 12px; border:none; border-radius:8px; cursor:pointer; touch-action:none}
+    .ui{
+      position:absolute;bottom:10px;left:50%;
+      transform:translateX(-50%);
+      display:flex;gap:6px;z-index:10
+    }
+    .ui button{
+      padding:6px 10px;border-radius:12px;border:none;cursor:pointer
+    }
 
-  /* 砂レイヤー */
-  #sandLayer{position:fixed; inset:0; width:100svw; height:100svh; z-index:2; touch-action:none}
+    #toast{
+      position:absolute;top:10px;left:10px;
+      background:rgba(0,0,0,0.6);
+      padding:6px 12px;border-radius:6px;
+      z-index:10
+    }
 
-  /* 貝 */
-  .shell{position:fixed; transform:translate(-50%,-50%) scale(.6);
-         width:clamp(48px,6svw,72px); height:auto; z-index:3;
-         transition:transform .2s ease, opacity .2s ease; opacity:0; cursor:grab; touch-action:none}
-  .shell.show{transform:translate(-50%,-50%) scale(1); opacity:1}
-  .shell.dragging{opacity:.9; cursor:grabbing}
+    #langSel{position:absolute;top:10px;right:10px;z-index:10}
 
-  .ph{display:inline-flex; align-items:center; justify-content:center;
-      background:#222; color:#f66; border:2px solid #f66; border-radius:10px; padding:6px; font-size:12px}
-</style>
+    .shell{
+      position:absolute;width:60px;height:60px;
+      background-size:contain;background-repeat:no-repeat;
+      background-position:center;
+      cursor:grab;user-select:none;
+      touch-action:none;
+    }
+
+    .speech{
+      position:absolute;
+      background:#fff;color:#000;
+      padding:4px 8px;border-radius:8px;
+      font-size:14px;
+      transform:translate(-50%,-100%);
+      white-space:nowrap;
+      animation:fadeout 2s forwards;
+    }
+    @keyframes fadeout{
+      0%{opacity:1;transform:translate(-50%,-100%)}
+      100%{opacity:0;transform:translate(-50%,-150%)}
+    }
+  </style>
 </head>
 <body>
   <!-- 背景 -->
-  <div id="bg-sunrise" class="bg grad-sunrise"></div>
-  <div id="bg-beach"   class="bg grad-beach"></div>
-  <div id="bg-night"   class="bg grad-night"></div>
+  <div id="bg-sunrise" class="bg" style="background-image:url('./public/bg/sunrise.jpg')"></div>
+  <div id="bg-beach"   class="bg hide" style="background-image:url('./public/bg/beach_day.jpg')"></div>
+  <div id="bg-night"   class="bg hide" style="background-image:url('./public/bg/night_beach.jpg')"></div>
 
-  <!-- WHOAI -->
-  <img id="whoai" class="whoai" alt="whoai">
+  <!-- WHOAIキャラ -->
+  <img id="whoai" class="whoai" src="./assets/stage1/green_open.png" alt="whoai">
 
   <!-- バケツ -->
-  <div class="bucket" id="bucket">
-    <img id="bucketImg" alt="bucket">
-    <div id="counter" class="counter">0</div>
-  </div>
+  <div class="bucket"><img id="bucketImg" src="./public/bucket.png" alt="bucket"></div>
+  <div id="counter">0</div>
 
   <!-- UI -->
   <div id="toast"></div>
   <div class="ui">
-    <button id="btnStart">はじめる</button>
-    <button id="btnNight">夜へ</button>
+    <button id="btnStart" data-i18n="btn.start">はじめる</button>
+    <button id="btnCook" data-i18n="btn.cook">料理</button>
+    <button id="btnAcc"  data-i18n="btn.acc">アクセサリー</button>
+    <button id="btnCol"  data-i18n="btn.col">コレクション</button>
+    <button id="btnNight" data-i18n="btn.night">夜へ</button>
   </div>
-
-  <!-- 砂 -->
-  <canvas id="sandLayer" class="hide"></canvas>
+  <select id="langSel" aria-label="language">
+    <option value="ja">日本語</option>
+    <option value="en">English</option>
+    <option value="ko">한국어</option>
+    <option value="zh">中文</option>
+  </select>
 
 <script>
-/* ===== 全体のスクロールを止める ===== */
-function blockScroll(e){ e.preventDefault(); }
-window.addEventListener('touchmove', blockScroll, {passive:false});
-window.addEventListener('wheel',      blockScroll, {passive:false});
-
-/* ===== 画像ユーティリティ ===== */
-function setImageWithFallback(imgEl, candidates, onFailBox){
-  let i=0; function tryNext(){
-    if(i>=candidates.length){
-      if(onFailBox){
-        const box=document.createElement('div'); box.className=onFailBox.className; box.textContent=onFailBox.label;
-        imgEl.parentElement.replaceChildren(box);
-      } return;
-    }
-    const src=candidates[i++]; imgEl.onerror=tryNext; imgEl.src=src;
-  } tryNext();
-}
-function preload(src){return new Promise(r=>{const im=new Image();im.onload=()=>r(src);im.onerror=()=>r(null);im.src=src+'?v='+Date.now();});}
-
-/* ===== 背景 ===== */
-const BG={sunrise:'public/bg/sunrise.jpg',beach:'public/bg/beach_day.jpg',night:'public/bg/night_beach.jpg'};
-const bgEl={sunrise:document.getElementById('bg-sunrise'),beach:document.getElementById('bg-beach'),night:document.getElementById('bg-night')};
-function showOnly(el){Object.values(bgEl).forEach(x=>x.classList.remove('show')); el.classList.add('show');}
-async function setupBackgrounds(){
-  const ok={sunrise:await preload(BG.sunrise),beach:await preload(BG.beach),night:await preload(BG.night)};
-  if(ok.sunrise) bgEl.sunrise.style.backgroundImage=`url(${ok.sunrise})`;
-  if(ok.beach)   bgEl.beach  .style.backgroundImage=`url(${ok.beach})`;
-  if(ok.night)   bgEl.night  .style.backgroundImage=`url(${ok.night})`;
-}
-
-/* ===== キャラ・バケツ ===== */
-const whoaiImg=document.getElementById('whoai');
-setImageWithFallback(whoaiImg,
-  ['assets/stage1/green_open.png','public/assets/stage1/green_open.png'],
-  {className:'ph whoai', label:'missing: whoai'});
-const bucketImg=document.getElementById('bucketImg');
-setImageWithFallback(bucketImg,
-  ['public/bucket.png.pug','public/props/bucket.png'],
-  {className:'bucket fallback', label:'missing: bucket'});
-
-/* ===== 状態 ===== */
-const toast=document.getElementById('toast'); const bucket=document.getElementById('bucket');
-const counterEl=document.getElementById('counter'); let count=0;
-function msg(s){toast.textContent=s;}
-function setScene(name){
-  shellsOnField.forEach(s=>s.el.remove()); shellsOnField=[];
-  if(name==='sunrise'){showOnly(bgEl.sunrise); hideSand(); msg('おはよう。朝日がきれいだね');}
-  if(name==='beach'){  showOnly(bgEl.beach);   showSand(); msg('砂をやさしくなでてみよう');}
-  if(name==='night'){  showOnly(bgEl.night);   hideSand(); msg('今日はここまでにしようか');}
-}
-
-/* ===== 砂 ===== */
-const sandCanvas=document.getElementById('sandLayer'); const sctx=sandCanvas.getContext('2d',{willReadFrequently:true});
-let isBrushing=false, shellsOnField=[]; const TILE=80; let depthMap={}, brushCount={};
-const SAND={brush:26,spawnProb:0.25,maxShells:10};
-
-function vpSize(){const w=window.visualViewport?visualViewport.width:document.documentElement.clientWidth;
-                  const h=window.visualViewport?visualViewport.height:document.documentElement.clientHeight;
-                  return {w:Math.floor(w),h:Math.floor(h)};}
-function resizeSand(){const {w,h}=vpSize(); sandCanvas.width=w; sandCanvas.height=h;
-  const g=sctx.createLinearGradient(0,0,0,h); g.addColorStop(0,'#D9C8A6'); g.addColorStop(1,'#CBB890');
-  sctx.fillStyle=g; sctx.fillRect(0,0,w,h);}
-function initDepth(){depthMap={}; brushCount={}; const {w,h}=vpSize(); const cols=Math.ceil(w/TILE), rows=Math.ceil(h/TILE);
-  for(let c=0;c<cols;c++)for(let r=0;r<rows;r++){const p=Math.random(); const d=(p>0.85)?3:(p>0.5)?2:1; depthMap[`${c},${r}`]=d; brushCount[`${c},${r}`]=0;}}
-function showSand(){sandCanvas.classList.remove('hide'); resizeSand(); initDepth();
-  window.addEventListener('resize',resizeSand);}
-function hideSand(){sandCanvas.classList.add('hide'); window.removeEventListener('resize',resizeSand);}
-sandCanvas.addEventListener('pointerdown', e=>{e.preventDefault(); isBrushing=true; sandCanvas.setPointerCapture(e.pointerId); brushAt(e);},{passive:false});
-sandCanvas.addEventListener('pointermove', e=>{if(!isBrushing)return; e.preventDefault(); brushAt(e);},{passive:false});
-sandCanvas.addEventListener('pointerup',   e=>{e.preventDefault(); isBrushing=false;},{passive:false});
-sandCanvas.addEventListener('pointercancel',e=>{e.preventDefault(); isBrushing=false;},{passive:false});
-
-function brushAt(e){
-  const r=sandCanvas.getBoundingClientRect(); const x=e.clientX-r.left, y=e.clientY-r.top;
-  sctx.globalCompositeOperation='destination-out'; sctx.beginPath(); sctx.arc(x,y,SAND.brush,0,Math.PI*2); sctx.fill(); sctx.globalCompositeOperation='source-over';
-  const col=Math.floor(x/TILE), row=Math.floor(y/TILE), key=`${col},${row}`;
-  if(depthMap[key]){brushCount[key]++; if(brushCount[key]>=depthMap[key]){depthMap[key]=Infinity; maybeSpawnShell(x,y);}}
-}
-
-/* ===== 貝 ===== */
-const COMMON=["public/items/asari1.png","public/items/asari2.png","public/items/asari3.png"];
-const RARE=["public/items/aurora_shell.png","public/items/flame_shell.png","public/items/luminous_shell.png","public/items/mystic_shell.png","public/items/night_sky_shell.png","public/items/rare_pearl.png","public/items/rare_rainbow.png","public/items/wave_shell.png"];
-
-function maybeSpawnShell(x,y){
-  if(shellsOnField.length>=SAND.maxShells) return;
-  if(Math.random()>SAND.spawnProb) return;
-  const spread=80; const rx=x+(Math.random()*2-1)*spread, ry=y+(Math.random()*2-1)*spread; const {w,h}=vpSize();
-  const cx=Math.max(40,Math.min(w-40,rx)); const cy=Math.max(80,Math.min(h-80,ry));
-  const pool=Math.random()<0.8?COMMON:RARE; const src=pool[Math.floor(Math.random()*pool.length)];
-  const el=document.createElement('img'); el.className='shell'; el.style.left=cx+'px'; el.style.top=cy+'px';
-  setImageWithFallback(el,[src,src.replace('public/','')]);
-  document.body.appendChild(el); requestAnimationFrame(()=>el.classList.add('show'));
-  enableDragToBucket(el); shellsOnField.push({x:cx,y:cy,el});
-}
-
-function enableDragToBucket(el){
-  let pid=null;
-  el.addEventListener('pointerdown', e=>{
-    e.preventDefault(); pid=e.pointerId; el.setPointerCapture(pid); el.classList.add('dragging');
-    el.addEventListener('pointermove', onMove, {passive:false});
-    el.addEventListener('pointerup',   onUp,   {passive:false});
-    el.addEventListener('pointercancel',onUp,  {passive:false});
-  },{passive:false});
-  function onMove(ev){if(ev.pointerId!==pid)return; ev.preventDefault(); el.style.left=ev.clientX+'px'; el.style.top=ev.clientY+'px';}
-  function onUp(ev){
-    if(ev.pointerId!==pid)return; ev.preventDefault();
-    el.classList.remove('dragging'); el.releasePointerCapture(pid);
-    el.removeEventListener('pointermove', onMove); el.removeEventListener('pointerup', onUp); el.removeEventListener('pointercancel', onUp); pid=null;
-    const b=bucket.getBoundingClientRect(); const hitPad=20;
-    const bx=b.left-hitPad, by=b.top-hitPad, br=b.right+hitPad, bb=b.bottom+hitPad;
-    const s=el.getBoundingClientRect(); const overlap=!(s.right<bx||s.left>br||s.bottom<by||s.top>bb);
-    if(overlap){el.remove(); count++; counterEl.textContent=count; whoaiImg.classList.add('yay'); msg('やったね！'); setTimeout(()=>whoaiImg.classList.remove('yay'),600);}
+/* i18n（シンプル版） */
+const I18N = {
+  ja:{
+    "title":"WHOAI Gem",
+    "toast.sunrise":"おはよう。朝日がきれいだね",
+    "toast.beach":"砂をやさしくなでてみよう",
+    "toast.night":"今日はここまでにしようか",
+    "btn.start":"はじめる","btn.cook":"料理","btn.acc":"アクセサリー","btn.col":"コレクション","btn.night":"夜へ"
+  },
+  en:{
+    "title":"WHOAI Gem",
+    "toast.sunrise":"Good morning, the sunrise is beautiful",
+    "toast.beach":"Gently stroke the sand",
+    "toast.night":"Shall we call it a day?",
+    "btn.start":"Start","btn.cook":"Cook","btn.acc":"Accessory","btn.col":"Collection","btn.night":"Night"
   }
+};
+let curLang="ja";
+function t(key){return I18N[curLang][key]||key;}
+function applyI18n(){
+  document.querySelectorAll("[data-i18n]").forEach(el=>{
+    el.textContent=t(el.dataset.i18n);
+  });
+}
+document.getElementById("langSel").onchange=e=>{
+  curLang=e.target.value;applyI18n();showToast("toast.sunrise");
+};
+
+/* UI */
+const toast=document.getElementById("toast");
+function showToast(key){toast.textContent=t(key);}
+
+/* 状態 */
+let count=0;
+let shells=[];
+
+/* 背景切替 */
+function showScene(id,msg){
+  document.querySelectorAll(".bg").forEach(bg=>bg.classList.add("hide"));
+  document.getElementById(id).classList.remove("hide");
+  showToast(msg);
 }
 
-/* ===== 初期化 ===== */
-document.getElementById('btnStart').onclick=()=>setScene('beach');
-document.getElementById('btnNight').onclick=()=>setScene('night');
-(async()=>{await setupBackgrounds(); setScene('sunrise');})();
+/* 貝配置 */
+const COMMON=[
+  "./public/items/asari1.png","./public/items/asari2.png","./public/items/asari3.png"
+];
+const RARE=[
+  "./public/items/aurora_shell.png","./public/items/flame_shell.png","./public/items/luminous_shell.png",
+  "./public/items/mystic_shell.png","./public/items/night_sky_shell.png",
+  "./public/items/rare_pearl.png","./public/items/rare_rainbow.png","./public/items/wave_shell.png"
+];
+
+function spawnShell(){
+  const img = (Math.random()<0.7?COMMON:RARE)[Math.floor(Math.random()*3)];
+  const shell=document.createElement("div");
+  shell.className="shell";
+  shell.style.backgroundImage=`url(${img})`;
+  shell.style.left=Math.random()*70+10+"%";
+  shell.style.top=Math.random()*50+40+"%";
+  document.body.appendChild(shell);
+  shells.push(shell);
+
+  makeDraggable(shell);
+}
+
+/* ドラッグ処理 */
+function makeDraggable(el){
+  let offsetX,offsetY,dragging=false;
+
+  function onDown(e){
+    dragging=true;
+    offsetX=(e.touches?e.touches[0].clientX:e.clientX)-el.offsetLeft;
+    offsetY=(e.touches?e.touches[0].clientY:e.clientY)-el.offsetTop;
+    e.preventDefault();
+  }
+  function onMove(e){
+    if(!dragging)return;
+    const x=(e.touches?e.touches[0].clientX:e.clientX)-offsetX;
+    const y=(e.touches?e.touches[0].clientY:e.clientY)-offsetY;
+    el.style.left=x+"px";el.style.top=y+"px";
+  }
+  function onUp(e){
+    if(!dragging)return;dragging=false;
+    const bucket=document.getElementById("bucketImg").getBoundingClientRect();
+    const shell=el.getBoundingClientRect();
+    if(shell.left<bucket.right && shell.right>bucket.left &&
+       shell.top<bucket.bottom && shell.bottom>bucket.top){
+      el.remove();
+      count++;
+      document.getElementById("counter").textContent=count;
+      // 吹き出し
+      const whoai=document.getElementById("whoai");
+      const rect=whoai.getBoundingClientRect();
+      const sp=document.createElement("div");
+      sp.className="speech";sp.textContent="やったね！";
+      sp.style.left=(rect.left+rect.width/2)+"px";
+      sp.style.top=rect.top+"px";
+      document.body.appendChild(sp);
+      setTimeout(()=>sp.remove(),2000);
+    }
+  }
+  el.addEventListener("mousedown",onDown);
+  el.addEventListener("touchstart",onDown,{passive:false});
+  window.addEventListener("mousemove",onMove);
+  window.addEventListener("touchmove",onMove,{passive:false});
+  window.addEventListener("mouseup",onUp);
+  window.addEventListener("touchend",onUp);
+}
+
+/* キャラで砂をなでる演出（簡易） */
+document.getElementById("whoai").addEventListener("mousedown",()=>showToast("toast.beach"));
+document.getElementById("whoai").addEventListener("touchstart",()=>showToast("toast.beach"));
+
+/* ボタン */
+document.getElementById("btnStart").onclick=()=>{
+  showScene("bg-sunrise","toast.sunrise");
+  spawnShell();
+};
+document.getElementById("btnCook").onclick=()=>alert("料理シーンへ");
+document.getElementById("btnAcc").onclick=()=>alert("アクセサリーシーンへ");
+document.getElementById("btnCol").onclick=()=>alert("コレクションシーンへ");
+document.getElementById("btnNight").onclick=()=>showScene("bg-night","toast.night");
+
+/* 初期化 */
+applyI18n();
+showScene("bg-sunrise","toast.sunrise");
 </script>
 </body>
 </html>
