--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -94,7 +94,7 @@
   <img id="whoai" class="whoai" src="./assets/stage1/green_open.png" alt="whoai">
 
   <!-- バケツ -->
-  <div class="bucket"><img id="bucketImg" src="./public/bucket.png" alt="bucket"></div>
+  <div class="bucket"><img id="bucketImg" src="./public/bucket.png.png" alt="bucket"></div>
   <div id="counter">0</div>
 
   <!-- UI -->
