--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -91,7 +91,7 @@
   <div id="bg-night"   class="bg hide" style="background-image:url('./public/bg/night_beach.jpg')"></div>
 
   <!-- WHOAIキャラ -->
-  <img id="whoai" class="whoai" src="./assets/stage1/green_open.png" alt="whoai">
+  <img id="whoai" class="whoai" src="./public./assets/stage1/green_open.png" alt="whoai">
 
   <!-- バケツ -->
   <div class="bucket"><img id="bucketImg" src="./public/bucket.png.png" alt="bucket"></div>
