--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -1,246 +1,252 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title data-i18n="title">WHOAI Gem</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <style>
-    body,html{
-      margin:0;padding:0;overflow:hidden;height:100%;
-      font-family:sans-serif;background:#000;color:#fff;
-      touch-action:none; /* スクロール防止（スマホ用） */
-    }
-    .bg{
-      position:absolute;top:0;left:0;width:100%;height:100%;
-      background-size:cover;background-position:center;
-      transition:opacity 1s;
-    }
-    .hide{opacity:0;pointer-events:none}
+<meta charset="UTF-8" />
+<title>WHOAI Gem</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<style>
+  html,body{margin:0;padding:0;height:100%;overflow:hidden;background:#000;color:#fff;
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,'Hiragino Sans','Noto Sans JP',sans-serif;
+    touch-action:none; overscroll-behavior:none;}
+  .bg{position:fixed;inset:0;background-size:cover;background-position:center;transition:opacity .8s;opacity:0}
+  .bg.show{opacity:1}
 
-    .whoai{
-      position:absolute;
-      bottom:12vh;left:5vw;
-      width:clamp(80px,12vw,140px);
-      animation:hop 2s infinite;
-      user-select:none;
-    }
-    @keyframes hop{0%,100%{transform:translateY(0)}50%{transform:translateY(-15px)}}
+  /* WHOAI（ドラッグ可） */
+  #whoaiWrap{position:fixed;left:5vw;bottom:12vh;z-index:4;touch-action:none}
+  #whoai{width:clamp(80px,12vw,140px);animation:hop 2s infinite;user-select:none}
+  @keyframes hop{0%,100%{transform:translateY(0)}50%{transform:translateY(-15px)}}
 
-    .bucket{
-      position:absolute;
-      right:2vw;bottom:6vh;
-      width:clamp(72px,14vw,160px);
-      user-select:none;
-    }
-    .bucket img{display:block;width:100%;height:auto}
+  /* バケツ */
+  .bucket{position:fixed;right:2vw;bottom:7vh;z-index:4;width:clamp(72px,14vw,160px)}
+  .bucket img{display:block;width:100%;height:auto}
+  #counter{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);
+    background:#fff;color:#111;border-radius:999px;padding:4px 8px;font-size:clamp(12px,2vw,18px);pointer-events:none}
 
-    #counter{
-      position:absolute;
-      right:calc(2vw + 40px); bottom:calc(6vh + 40px);
-      font-size:clamp(16px,2vw,24px);
-      background:#fff;color:#111;
-      padding:6px 12px;border-radius:50%;
-      text-align:center;
-    }
+  /* UI & トースト */
+  #toast{position:fixed;top:10px;left:10px;z-index:10;background:rgba(0,0,0,.6);padding:6px 12px;border-radius:8px}
+  .ui{position:fixed;left:50%;bottom:10px;transform:translateX(-50%);display:flex;gap:6px;z-index:10}
+  .ui button{padding:6px 12px;border:none;border-radius:10px;cursor:pointer}
 
-    .ui{
-      position:absolute;bottom:10px;left:50%;
-      transform:translateX(-50%);
-      display:flex;gap:6px;z-index:10
-    }
-    .ui button{
-      padding:6px 10px;border-radius:12px;border:none;cursor:pointer
-    }
+  /* 砂キャンバス & 貝 */
+  #sand{position:fixed;inset:0;z-index:2;touch-action:none}
+  .shell{position:fixed;z-index:3;width:clamp(48px,6vw,72px);height:auto;transform:translate(-50%,-50%);
+         background-size:contain;background-repeat:no-repeat;background-position:center;cursor:grab;touch-action:none;
+         transition:opacity .2s,transform .2s;opacity:0}
+  .shell.show{opacity:1;transform:translate(-50%,-50%) scale(1)}
+  .shell.drag{opacity:.95}
 
-    #toast{
-      position:absolute;top:10px;left:10px;
-      background:rgba(0,0,0,0.6);
-      padding:6px 12px;border-radius:6px;
-      z-index:10
-    }
-
-    #langSel{position:absolute;top:10px;right:10px;z-index:10}
-
-    .shell{
-      position:absolute;width:60px;height:60px;
-      background-size:contain;background-repeat:no-repeat;
-      background-position:center;
-      cursor:grab;user-select:none;
-      touch-action:none;
-    }
-
-    .speech{
-      position:absolute;
-      background:#fff;color:#000;
-      padding:4px 8px;border-radius:8px;
-      font-size:14px;
-      transform:translate(-50%,-100%);
-      white-space:nowrap;
-      animation:fadeout 2s forwards;
-    }
-    @keyframes fadeout{
-      0%{opacity:1;transform:translate(-50%,-100%)}
-      100%{opacity:0;transform:translate(-50%,-150%)}
-    }
-  </style>
+  /* 吹き出し */
+  .bubble{position:absolute;left:50%;bottom:100%;transform:translate(-50%,-10px);
+          background:#fff;color:#111;border-radius:12px;padding:4px 8px;font-size:14px;
+          box-shadow:0 2px 6px rgba(0,0,0,.25);opacity:0;transition:opacity .2s, transform .2s}
+  .bubble::after{content:'';position:absolute;left:50%;top:100%;transform:translateX(-50%);
+                 border:8px solid transparent;border-top-color:#fff}
+  .bubble.show{opacity:1;transform:translate(-50%,-14px)}
+</style>
 </head>
 <body>
   <!-- 背景 -->
   <div id="bg-sunrise" class="bg" style="background-image:url('./public/bg/sunrise.jpg')"></div>
-  <div id="bg-beach"   class="bg hide" style="background-image:url('./public/bg/beach_day.jpg')"></div>
-  <div id="bg-night"   class="bg hide" style="background-image:url('./public/bg/night_beach.jpg')"></div>
+  <div id="bg-beach"   class="bg" style="background-image:url('./public/bg/beach_day.jpg')"></div>
+  <div id="bg-night"   class="bg" style="background-image:url('./public/bg/night_beach.jpg')"></div>
 
-  <!-- WHOAIキャラ -->
-  <img id="whoai" class="whoai" src="./public./assets/stage1/green_open.png" alt="whoai">
+  <!-- WHOAI（ドラッグで砂をなでる） -->
+  <div id="whoaiWrap">
+    <img id="whoai" src="./public/assets/stage1/green_open.png" alt="whoai">
+    <div id="bubble" class="bubble">やったね！</div>
+  </div>
 
-  <!-- バケツ -->
-  <div class="bucket"><img id="bucketImg" src="./public/bucket.png.png" alt="bucket"></div>
-  <div id="counter">0</div>
+  <!-- バケツ + カウンタ -->
+  <div id="bucket" class="bucket">
+    <img id="bucketImg" src="./public/bucket.png.png" alt="bucket">
+    <div id="counter">0</div>
+  </div>
 
   <!-- UI -->
   <div id="toast"></div>
   <div class="ui">
-    <button id="btnStart" data-i18n="btn.start">はじめる</button>
-    <button id="btnCook" data-i18n="btn.cook">料理</button>
-    <button id="btnAcc"  data-i18n="btn.acc">アクセサリー</button>
-    <button id="btnCol"  data-i18n="btn.col">コレクション</button>
-    <button id="btnNight" data-i18n="btn.night">夜へ</button>
+    <button id="btnStart">はじめる</button>
+    <button id="btnNight">夜へ</button>
   </div>
-  <select id="langSel" aria-label="language">
-    <option value="ja">日本語</option>
-    <option value="en">English</option>
-    <option value="ko">한국어</option>
-    <option value="zh">中文</option>
-  </select>
+
+  <!-- 砂 -->
+  <canvas id="sand"></canvas>
 
 <script>
-/* i18n（シンプル版） */
-const I18N = {
-  ja:{
-    "title":"WHOAI Gem",
-    "toast.sunrise":"おはよう。朝日がきれいだね",
-    "toast.beach":"砂をやさしくなでてみよう",
-    "toast.night":"今日はここまでにしようか",
-    "btn.start":"はじめる","btn.cook":"料理","btn.acc":"アクセサリー","btn.col":"コレクション","btn.night":"夜へ"
-  },
-  en:{
-    "title":"WHOAI Gem",
-    "toast.sunrise":"Good morning, the sunrise is beautiful",
-    "toast.beach":"Gently stroke the sand",
-    "toast.night":"Shall we call it a day?",
-    "btn.start":"Start","btn.cook":"Cook","btn.acc":"Accessory","btn.col":"Collection","btn.night":"Night"
-  }
+/* ====== 便利関数 ====== */
+const toast = document.getElementById('toast');
+function say(s){ toast.textContent = s; }
+const bg = {
+  sunrise: document.getElementById('bg-sunrise'),
+  beach  : document.getElementById('bg-beach'),
+  night  : document.getElementById('bg-night')
 };
-let curLang="ja";
-function t(key){return I18N[curLang][key]||key;}
-function applyI18n(){
-  document.querySelectorAll("[data-i18n]").forEach(el=>{
-    el.textContent=t(el.dataset.i18n);
-  });
-}
-document.getElementById("langSel").onchange=e=>{
-  curLang=e.target.value;applyI18n();showToast("toast.sunrise");
-};
-
-/* UI */
-const toast=document.getElementById("toast");
-function showToast(key){toast.textContent=t(key);}
-
-/* 状態 */
-let count=0;
-let shells=[];
-
-/* 背景切替 */
-function showScene(id,msg){
-  document.querySelectorAll(".bg").forEach(bg=>bg.classList.add("hide"));
-  document.getElementById(id).classList.remove("hide");
-  showToast(msg);
+function scene(name){
+  Object.values(bg).forEach(e=>e.classList.remove('show'));
+  bg[name].classList.add('show');
 }
 
-/* 貝配置 */
-const COMMON=[
-  "./public/items/asari1.png","./public/items/asari2.png","./public/items/asari3.png"
-];
-const RARE=[
-  "./public/items/aurora_shell.png","./public/items/flame_shell.png","./public/items/luminous_shell.png",
-  "./public/items/mystic_shell.png","./public/items/night_sky_shell.png",
-  "./public/items/rare_pearl.png","./public/items/rare_rainbow.png","./public/items/wave_shell.png"
-];
+/* ====== 砂キャンバス（深さあり） ====== */
+const sand = document.getElementById('sand');
+const ctx  = sand.getContext('2d',{willReadFrequently:true});
+const TILE=80;              // 深さマップの1マス
+const BRUSH=26;             // ブラシ半径
+let depth={}, brushed={};   // 各タイルの深さ・擦った回数
 
-function spawnShell(){
-  const img = (Math.random()<0.7?COMMON:RARE)[Math.floor(Math.random()*3)];
-  const shell=document.createElement("div");
-  shell.className="shell";
-  shell.style.backgroundImage=`url(${img})`;
-  shell.style.left=Math.random()*70+10+"%";
-  shell.style.top=Math.random()*50+40+"%";
-  document.body.appendChild(shell);
-  shells.push(shell);
-
-  makeDraggable(shell);
+function resizeSand(){
+  sand.width = innerWidth;
+  sand.height= innerHeight;
+  const g = ctx.createLinearGradient(0,0,0,sand.height);
+  g.addColorStop(0,'#E2D2AE'); g.addColorStop(1,'#C8B68F');
+  ctx.fillStyle=g; ctx.fillRect(0,0,sand.width,sand.height);
 }
-
-/* ドラッグ処理 */
-function makeDraggable(el){
-  let offsetX,offsetY,dragging=false;
-
-  function onDown(e){
-    dragging=true;
-    offsetX=(e.touches?e.touches[0].clientX:e.clientX)-el.offsetLeft;
-    offsetY=(e.touches?e.touches[0].clientY:e.clientY)-el.offsetTop;
-    e.preventDefault();
-  }
-  function onMove(e){
-    if(!dragging)return;
-    const x=(e.touches?e.touches[0].clientX:e.clientX)-offsetX;
-    const y=(e.touches?e.touches[0].clientY:e.clientY)-offsetY;
-    el.style.left=x+"px";el.style.top=y+"px";
-  }
-  function onUp(e){
-    if(!dragging)return;dragging=false;
-    const bucket=document.getElementById("bucketImg").getBoundingClientRect();
-    const shell=el.getBoundingClientRect();
-    if(shell.left<bucket.right && shell.right>bucket.left &&
-       shell.top<bucket.bottom && shell.bottom>bucket.top){
-      el.remove();
-      count++;
-      document.getElementById("counter").textContent=count;
-      // 吹き出し
-      const whoai=document.getElementById("whoai");
-      const rect=whoai.getBoundingClientRect();
-      const sp=document.createElement("div");
-      sp.className="speech";sp.textContent="やったね！";
-      sp.style.left=(rect.left+rect.width/2)+"px";
-      sp.style.top=rect.top+"px";
-      document.body.appendChild(sp);
-      setTimeout(()=>sp.remove(),2000);
+function initDepth(){
+  depth={}; brushed={};
+  const cols=Math.ceil(sand.width/TILE), rows=Math.ceil(sand.height/TILE);
+  for(let c=0;c<cols;c++){
+    for(let r=0;r<rows;r++){
+      // 3段階の深さ（たまに固い砂）
+      const p=Math.random();
+      depth[`${c},${r}`]=(p>0.85)?3:(p>0.55)?2:1;
+      brushed[`${c},${r}`]=0;
     }
   }
-  el.addEventListener("mousedown",onDown);
-  el.addEventListener("touchstart",onDown,{passive:false});
-  window.addEventListener("mousemove",onMove);
-  window.addEventListener("touchmove",onMove,{passive:false});
-  window.addEventListener("mouseup",onUp);
-  window.addEventListener("touchend",onUp);
+}
+function brushAt(x,y){
+  ctx.globalCompositeOperation='destination-out';
+  ctx.beginPath(); ctx.arc(x,y,BRUSH,0,Math.PI*2); ctx.fill();
+  ctx.globalCompositeOperation='source-over';
+  const col=Math.floor(x/TILE), row=Math.floor(y/TILE), key=`${col},${row}`;
+  if(depth[key]!=null){
+    brushed[key]++;
+    if(brushed[key]>=depth[key]){ depth[key]=Infinity; maybeSpawn(x,y); }
+  }
 }
 
-/* キャラで砂をなでる演出（簡易） */
-document.getElementById("whoai").addEventListener("mousedown",()=>showToast("toast.beach"));
-document.getElementById("whoai").addEventListener("touchstart",()=>showToast("toast.beach"));
+/* ====== WHOAI をドラッグ → 砂をなでる ====== */
+const whoaiWrap=document.getElementById('whoaiWrap');
+const whoai    =document.getElementById('whoai');
+const bubble   =document.getElementById('bubble');
+let wpid=null;
+function showBubble(text){
+  bubble.textContent=text; bubble.classList.add('show');
+  setTimeout(()=>bubble.classList.remove('show'),1000);
+}
+whoaiWrap.addEventListener('pointerdown', e=>{
+  e.preventDefault(); wpid=e.pointerId; whoaiWrap.setPointerCapture(wpid);
+});
+whoaiWrap.addEventListener('pointermove', e=>{
+  if(e.pointerId!==wpid) return; e.preventDefault();
+  const w=whoaiWrap.offsetWidth, h=whoaiWrap.offsetHeight;
+  const x=Math.max(0,Math.min(innerWidth -w, e.clientX - w/2));
+  const y=Math.max(0,Math.min(innerHeight-h, e.clientY - h/2));
+  whoaiWrap.style.left=x+'px'; whoaiWrap.style.top=y+'px';
+  if(currentScene==='beach') brushAt(e.clientX, e.clientY);
+});
+whoaiWrap.addEventListener('pointerup', ()=>{ wpid=null; whoaiWrap.releasePointerCapture; });
+whoaiWrap.addEventListener('pointercancel', ()=>{ wpid=null; whoaiWrap.releasePointerCapture; });
 
-/* ボタン */
-document.getElementById("btnStart").onclick=()=>{
-  showScene("bg-sunrise","toast.sunrise");
-  spawnShell();
-};
-document.getElementById("btnCook").onclick=()=>alert("料理シーンへ");
-document.getElementById("btnAcc").onclick=()=>alert("アクセサリーシーンへ");
-document.getElementById("btnCol").onclick=()=>alert("コレクションシーンへ");
-document.getElementById("btnNight").onclick=()=>showScene("bg-night","toast.night");
+/* ====== 貝：間引きスポーン（散らばる・出すぎない） ====== */
+const COMMON=[
+  './public/items/asari1.png','./public/items/asari2.png','./public/items/asari3.png'
+];
+const RARE=[
+  './public/items/aurora_shell.png','./public/items/flame_shell.png','./public/items/luminous_shell.png',
+  './public/items/mystic_shell.png','./public/items/night_sky_shell.png',
+  './public/items/rare_pearl.png','./public/items/rare_rainbow.png','./public/items/wave_shell.png'
+];
 
-/* 初期化 */
-applyI18n();
-showScene("bg-sunrise","toast.sunrise");
+const shells=[];                // {el,x,y}
+const MAX_SHELLS=9;            // 出現上限
+const MIN_DIST=90;             // 既存貝との最小距離
+const SPAWN_PROB=0.28;         // タイル解放時の出現確率（“ない時もある”）
+
+function tooClose(x,y){
+  return shells.some(s=>{
+    const dx=s.x-x, dy=s.y-y; return Math.hypot(dx,dy)<MIN_DIST;
+  });
+}
+function maybeSpawn(x,y){
+  if(shells.length>=MAX_SHELLS) return;
+  if(Math.random()>SPAWN_PROB) return; // 出ないときもある
+  // 少し周囲に散らす
+  const j=80; let px=x+(Math.random()*2-1)*j, py=y+(Math.random()*2-1)*j;
+  px=Math.max(40,Math.min(innerWidth -40,px));
+  py=Math.max(80,Math.min(innerHeight-80,py));
+  if(tooClose(px,py)) return; // 間引き
+
+  const pool=Math.random()<0.8?COMMON:RARE;
+  const src =pool[Math.floor(Math.random()*pool.length)];
+  const el=document.createElement('div');
+  el.className='shell'; el.style.left=px+'px'; el.style.top=py+'px';
+  el.style.backgroundImage=`url(${src})`;
+  document.body.appendChild(el); requestAnimationFrame(()=>el.classList.add('show'));
+  enableDrag(el);
+  shells.push({el,x:px,y:py});
+}
+
+/* ====== ドラッグでバケツに吸い込み ====== */
+const bucket   =document.getElementById('bucket');
+const bucketImg=document.getElementById('bucketImg');
+const counter  =document.getElementById('counter');
+let count=0;
+
+function enableDrag(el){
+  let pid=null, offX=0, offY=0;
+  el.addEventListener('pointerdown', e=>{
+    e.preventDefault(); pid=e.pointerId; el.setPointerCapture(pid);
+    offX=e.clientX-parseFloat(el.style.left); offY=e.clientY-parseFloat(el.style.top);
+    el.classList.add('drag');
+  },{passive:false});
+  el.addEventListener('pointermove', e=>{
+    if(e.pointerId!==pid) return; e.preventDefault();
+    const nx=e.clientX-offX, ny=e.clientY-offY;
+    el.style.left=nx+'px'; el.style.top=ny+'px';
+  },{passive:false});
+  function end(e){
+    if(e.pointerId!==pid) return; e.preventDefault(); el.classList.remove('drag'); el.releasePointerCapture(pid); pid=null;
+    const b=bucket.getBoundingClientRect(), s=el.getBoundingClientRect(), pad=20;
+    const hit=!(s.right<b.left-pad || s.left>b.right+pad || s.bottom<b.top-pad || s.top>b.bottom+pad);
+    if(hit){
+      el.remove();
+      const idx=shells.findIndex(o=>o.el===el); if(idx>-1) shells.splice(idx,1);
+      counter.textContent=++count; showBubble('やったね！');
+    }
+  }
+  el.addEventListener('pointerup', end,{passive:false});
+  el.addEventListener('pointercancel', end,{passive:false});
+}
+
+/* ====== シーン制御 ====== */
+let currentScene='sunrise';
+function setScene(name){
+  currentScene=name;
+  Object.values(bg).forEach(e=>e.classList.remove('show'));
+  bg[name].classList.add('show');
+
+  if(name==='sunrise'){ say('おはよう。朝日がきれいだね'); }
+  if(name==='beach'){
+    say('砂をやさしくなでてみよう');
+    resizeSand(); initDepth();
+    sand.classList.remove('hide');
+  }else{
+    sand.classList.add('hide');
+  }
+  if(name==='night'){ say('今日はここまでにしようか'); }
+}
+
+/* ====== 入力：砂（指/マウス） ====== */
+sand.addEventListener('pointerdown', e=>{e.preventDefault(); sand.setPointerCapture(e.pointerId); brushAt(e.clientX,e.clientY);},{passive:false});
+sand.addEventListener('pointermove', e=>{ if(e.pressure===0) return; e.preventDefault(); brushAt(e.clientX,e.clientY);},{passive:false});
+
+/* ====== ボタン ====== */
+document.getElementById('btnStart').onclick=()=>setScene('beach');
+document.getElementById('btnNight').onclick=()=>setScene('night');
+
+/* ====== 初期化 ====== */
+function init(){ resizeSand(); setScene('sunrise'); }
+addEventListener('resize', resizeSand);
+init();
 </script>
 </body>
 </html>
